# my-santander-finance

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  mkdocs.yml.ori  pyproject.toml
docs/en/: mkdocs.yml
docs/en/site/: 404.html  index.html  sitemap.xml
docs/en/site/contributing/: index.html
docs/en/site/search/: search_index.json
docs/es/: contributing.md  crontab.md  lint.md  versioning.md
docs/es/docs/: crontab.md  environment_variables.md  lint.md  logger.md
docs_build/es/: mkdocs.yml
docs_build/es/docs/: contributing.md  sqlite3.md
docs_build/ht/: mkdocs.yml
docs_build/ht/docs/: index.md
my_santander_finance/: app.py  dashboard.py  definitions.py  func_dir.py  func_excel.py  func_files.py  get_debito.py  import_debito.py  init.py  sanfi.py  settings.py  sqlite.sql
my_santander_finance/config/: settings.py
my_santander_finance/database/: mydatabase.py  sqlite.sql  table_amex_add_id_autoincrement.sql  table_debit_add_id_autoincrement.sql  table_visa_add_id_autoincrement.sql
my_santander_finance/logger/: __init__.py  logger.py
my_santander_finance/tags/: dict.py  insert_tag.py
my_santander_finance/util/: func_chrome.py  func_dir.py  func_excel.py  func_files.py
my_santander_finance/web_scraping/: get_amex.py  get_debito.py  get_visa.py  import_amex.py  import_debito.py  import_visa.py  santander_scraping.py
scripts/: docs.py
