[tool.poetry]
name = "my-santander-finance"
version = "0.3.1"
description = "automated process to obtain the consumption of the bank credit and debit cards, classify them and generate a dashboard"
authors = ["Oscar Paniagua <opaniagu@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/opaniagu/my-santander-finance"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business :: Financial :: Accounting",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.3.0"
PyAutoGUI = "^0.9.53"
webdriver-manager = "^3.7.1"
pywin32 = "^304"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.39"
pandas = "^1.4.3"
numpy = "^1.23.0"
xlrd = "^2.0.1"
click = "^8.1.3"
bumpversion = "^0.6.0"
flake8 = "^4.0.1"
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^22.6.0", allow-prereleases = true}
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "my-santander-finance" },
]

[tool.poetry.scripts]
sanfi = "my_santander_finance.sanfi:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
